 2011-07-25 02:19  asfernandes 
   M src/dsql/BoolNodes.cpp
Fixed the bug with NOT IN (list) reported by Ivan Prenosil in fb-devel.

 2011-07-25 01:40  asfernandes 
   M src/common/classes/stack.h
   M src/dsql/StmtNodes.cpp
Fixed the INSERT INTO ... SELECT bug reported by Ivan Prenosil in fb-devel.

 2011-07-24 22:15  asfernandes 
   M src/common/config/config_file.cpp
Correction for symlinks with relative path.

 2011-07-22 07:00  dimitr 
   M src/jrd/DatabaseSnapshot.cpp
   M src/jrd/btr.cpp
Front ported recent commits.

 2011-07-18 11:50  alexpeshkoff 
   M src/remote/server/server.cpp
Simplified code - thanks to Claudio

 2011-07-18 11:19  alexpeshkoff 
   M src/yvalve/PluginManager.cpp
Fixed assertion - thanks to Adriano

 2011-07-18 10:57  alexpeshkoff 
   M configure.in
   M src/common/os/posix/divorce.cpp
Front-ported Darwin port changes

 2011-07-17 09:49  hvlad 
   M src/jrd/dfw.epp
Port forward fix for bug CORE-3549 : Database corruption after end of session : page xxx is of wrong type expected 4 found 7

 2011-07-16 20:15  asfernandes 
   M src/gpre/c_cxx.cpp
   M src/jrd/nbak.cpp
Warnings.

 2011-07-16 18:49  asfernandes 
   M src/dsql/ExprNodes.cpp
   M src/dsql/dsql.cpp
   M src/dsql/parse.y
   M src/include/firebird/Message.h
   M src/jrd/Optimizer.cpp
Misc.

 2011-07-16 18:46  asfernandes 
   M src/dsql/DdlNodes.epp
Correct the lookup of unspecified parameters wrt packages.

 2011-07-16 10:41  hvlad 
   M src/jrd/vio.cpp
Port forward fix for bug CORE-3557 : AV in engine when preparing query against dropping table

 2011-07-15 11:52  dimitr 
   M lang_helpers/gds_codes.ftn
   M lang_helpers/gds_codes.pas
   M src/dsql/DdlNodes.epp
   M src/dsql/PackageNodes.epp
   M src/include/gen/codetext.h
   M src/include/gen/iberror.h
   M src/include/gen/msgs.h
   M src/include/gen/sql_code.h
   M src/include/gen/sql_state.h
   M src/jrd/drq.h
   M src/msgs/facilities2.sql
   M src/msgs/messages2.sql
   M src/msgs/system_errors2.sql